--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
