Downgrade React to 18.3.1 to resolve dependency conflicts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "react-dom": "^19.2.3",
     "react-helmet-async": "^2.0.5"
   },
+  "overrides": {
+    "react-helmet-async": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
